--- a/CSSTASK/TASK6/TASK6.css
+++ b/CSSTASK/TASK6/TASK6.css
@@ -53,7 +53,13 @@ h2{
     font-size:260%;
     color: #000;
     padding:5% 0 5% 10%;
-    background: #b9e9f5 url(images/play.png) no-repeat 90% 50%;
+    background: #b9e9f5;
+}
+#play{
+    position: absolute;
+    right:5%;
+    top:2%;
+    cursor: pointer;
 }
 .tell{
     font-size:240%;
